2009-04-09  Janne Blomqvist  <jb@gcc.gnu.org>

	PR libfortran/39665
	* io/io.h (st_parameter_dt): Add aligned attribute to u.p.value.
	* io/read.c (convert_real): Add note about alignment requirements.

2009-04-09  Nick Clifton  <nickc@redhat.com>

	* m4/cshift0.m4: Change copyright header to refer to version 3
	of the GNU General Public License with version 3.1 of the GCC
	Runtime Library Exception and to point readers at the COPYING3
	and COPYING3.RUNTIME files and the FSF's license web page.
	* c99_protos.h: Likewise.
	* config/fpu-387.h: Likewise.
	* config/fpu-aix.h: Likewise.
	* config/fpu-generic.h: Likewise.
	* config/fpu-glibc.h: Likewise.
	* config/fpu-sysv.h: Likewise.
	* intrinsics/abort.c: Likewise.
	* intrinsics/access.c: Likewise.
	* intrinsics/args.c: Likewise.
	* intrinsics/associated.c: Likewise.
	* intrinsics/c99_functions.c: Likewise.
	* intrinsics/chdir.c: Likewise.
	* intrinsics/chmod.c: Likewise.
	* intrinsics/clock.c: Likewise.
	* intrinsics/cpu_time.c: Likewise.
	* intrinsics/cshift0.c: Likewise.
	* intrinsics/ctime.c: Likewise.
	* intrinsics/date_and_time.c: Likewise.
	* intrinsics/dprod_r8.f90: Likewise.
	* intrinsics/dtime.c: Likewise.
	* intrinsics/env.c: Likewise.
	* intrinsics/eoshift0.c: Likewise.
	* intrinsics/eoshift2.c: Likewise.
	* intrinsics/erfc_scaled.c: Likewise.
	* intrinsics/erfc_scaled_inc.c: Likewise.
	* intrinsics/etime.c: Likewise.
	* intrinsics/exit.c: Likewise.
	* intrinsics/f2c_specifics.F90: Likewise.
	* intrinsics/fnum.c: Likewise.
	* intrinsics/gerror.c: Likewise.
	* intrinsics/getXid.c: Likewise.
	* intrinsics/getcwd.c: Likewise.
	* intrinsics/getlog.c: Likewise.
	* intrinsics/hostnm.c: Likewise.
	* intrinsics/ierrno.c: Likewise.
	* intrinsics/ishftc.c: Likewise.
	* intrinsics/iso_c_binding.c: Likewise.
	* intrinsics/iso_c_binding.h: Likewise.
	* intrinsics/iso_c_generated_procs.c: Likewise.
	* intrinsics/kill.c: Likewise.
	* intrinsics/link.c: Likewise.
	* intrinsics/malloc.c: Likewise.